# hw_23.2

./: .gitignore  README.md  catalog_data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_image.py  0003_alter_post_options.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html  (+1 more)
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_product_image_and_more.py  0002_product_manufactured_at_alter_product_created_at_and_more.py  0003_release.py  0004_product_owner.py  0005_alter_product_options_alter_release_options.py  0006_alter_release_options_alter_release_is_active.py
catalog/templates/: base.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
fixtures/: blog_data.json  catalog_data.json  data.users.json  groups.json  users.json  users_data.json
media/: Акты_работоспособности_скважин_ГМ_ГС_ТС_кусты1-6.pdf - Яндекс Документы.html
media/Акты_работоспособности_скважин_ГМ_ГС_ТС_кусты1-6.pdf - Яндекс Документы_files/: _client.ru.2a39a4645abf7ca3c3da.js  _client.ru.c2c78491081700b3f70e.css  docviewer.b5b22b52992534b6f22e.css  docviewer.ru.7b4df314c187a389541f.js  react-dom.16.14.0.min.js  saved_resource.html  watch.js  widget.js
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py  0003_alter_user_options.py  0004_user_token.py
(+10 files in other folders)
