[tool.poetry]
name = "hw-22-1"
version = "0.1.0"
description = ""
authors = ["UltimaKIND <minion9@mail.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
pillow = "^10.4.0"
psycopg2-binary = "^2.9.9"
ipython = "^8.26.0"
slugify = "^0.0.1"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
